-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.5.0 Beta
-
Windows 7, VS 2013
QGeoCoordinate triggers a BC break inside QMetaType when running a 5.4 built application against 5.5. If it is built against Qt 5.4.1 and then ran against Qt 5.5.0 beta then the message:
QMetaType::registerType: Binary compatibility break. Type flags for type 'QGeoCoordinate' [1386] don't match. Previously registered TypeFlags(0x307), now registering TypeFlags(0x107). This is an ODR break, which means that your application depends on a C++ undefined behavior.
appears.
- is required for
-
QTBUG-44654 Issues to be fixed before Qt 5.5 RC
-
- Closed
-